# eBPF-Diagnoser

./: .gitignore  Makefile  README.md  pyproject.toml  test_bpf_load.c
bpf/: cpu_probe.bpf.c  io_probe.bpf.c  lock_probe.bpf.c  mem_probe.bpf.c  syscall_probe.bpf.c
bpf/common/: vmlinux.h  vmlinux_types.h
bpf/loader/: bpf_loader.c
config/: default.yaml
docker/: lima-ebpf-dev.yaml  lima-openkylin.yaml  openkylin-test.Dockerfile
docs/: openKylin环境搭建指南.md  技术细节.md  测试报告.md  设计说明.md  题目要求.md
rules/: cpu_rules.yaml
scripts/: benchmark_overhead.sh  build_installer.sh  install-openkylin-vm.ps1  install-openkylin-vm.sh  installer_header.sh  postinstall-openkylin-win.sh  postinstall-openkylin.sh  run_tests.sh  setup_env.sh  ssh-to-vm.ps1  start-vm.ps1  stress_composite.sh  stress_cpu.sh  stress_io.sh  stress_lock.sh  stress_mem.sh  stress_syscall.sh  sync-to-vm.ps1  test_bpf_load.sh  test_bpf_load_all.sh  verify_core.py
src/: __init__.py  __main__.py  cli.py  config.py  main.py
src/analyzer/: __init__.py  anomaly.py  engine.py  rules.py
src/collector/: __init__.py  aggregator.py
src/llm/: __init__.py  analyzer.py  prompts.py  provider.py
src/llm/providers/: __init__.py  anthropic_provider.py  openai_provider.py
src/output/: __init__.py  formatter.py
src/probes/: __init__.py  base.py  bpf_loader.py  cpu_probe.py  io_probe.py  lock_probe.py  mem_probe.py  syscall_probe.py
