[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebpf-diagnoser"
version = "1.0.0"
description = "基于eBPF的轻量级系统异常观测与根因定位工具"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# BCC 需通过系统包管理器安装或从源码编译，无法通过 pip 安装
# Ubuntu: sudo apt install bpfcc-tools python3-bpfcc libbpfcc-dev
# openKylin: 需从源码编译，详见 docs/openKylin环境搭建指南.md
dev = [
    "pytest>=7.0",
]

[project.scripts]
ebpf-diagnoser = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]