[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebpf-diagnoser"
version = "1.0.0"
description = "基于eBPF的轻量级系统异常观测与根因定位工具"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# 运行时依赖: libbpf, libelf, zlib (通过系统包管理器安装)
# Ubuntu: sudo apt install libbpf-dev libelf1 zlib1g
# Fedora: sudo dnf install libbpf elfutils-libelf zlib
dev = [
    "pytest>=7.0",
]

[project.scripts]
ebpf-diagnoser = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]