[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebpf-diagnoser"
version = "1.0.0"
description = "基于eBPF的轻量级系统异常观测与根因定位工具"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# 运行时依赖: libbpf, libelf, zlib (通过系统包管理器安装)
# Ubuntu: sudo apt install libbpf-dev libelf1 zlib1g
# Fedora: sudo dnf install libbpf elfutils-libelf zlib
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "codespell>=2.2",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]
all = [
    "pytest>=7.0",
    "ruff>=0.4",
    "codespell>=2.2",
    "openai>=1.0",
    "anthropic>=0.20",
]

[project.scripts]
ebpf-diagnoser = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ───────────────────── Ruff 配置 ─────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B008",   # function call in default argument (click decorators)
    "SIM108", # use ternary operator (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ───────────────────── Codespell 配置 ─────────────────────
[tool.codespell]
skip = "*.pyc,build/,dist/,*.egg-info,.git"
ignore-words-list = "nd,sync,ist,thresold,hda,urat,struct,ser,ans,subprocess,pth,ot,cr,stdio,deque,warmup,hist,creat,anom,ie,fo,ist"
builtin = "clear,rare,informal,usage,code,names"